--- a/index.html
+++ b/index.html
@@ -1,12 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/0aa2753bb1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles.css">
     <title>Weather Dashboard</title>
 </head>
+
 <body>
-    <h1 Weather Dashboard></h1>
+    <h1>Weather Dashboard</h1>
+
+    <div class="jumbotron">
+        <h2>Current City's Forecast</h2>
+        <ul id="list" class="list-group">
+            <li class="list-group-item">Temperature</li>
+            <li class="list-group-item">Humidity</li>
+            <li class="list-group-item">Wind Speed</li>
+            <li class="list-group-item active">UV Index</li>
+        </ul>
+    </div>
+
+    <div id="search">
+        <h3>Search for a city:</h3>
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Enter A Location" aria-label="Recipient's username"
+                aria-describedby="basic-addon2">
+            <div class="input-group-append">
+                <button class="btn btn-primary" type="button"><i class="fas fa-search"></i></button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="col-md-6"></div>
+        <div class="card-deck">
+            <div class="card">
+                <img src="https://static01.nyt.com/images/2014/12/11/technology/personaltech/11machin-illo/11machin-illo-articleLarge-v3.jpg?quality=75&auto=webp&disable=upscale"
+                    width="250 px" height="300 px" class="card-img-top" alt="Day 1">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+                <div class="card-footer">
+                    <medium class="text-muted">Day 1</medium>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://static01.nyt.com/images/2014/12/11/technology/personaltech/11machin-illo/11machin-illo-articleLarge-v3.jpg?quality=75&auto=webp&disable=upscale"
+                    width="250 px" height="300 px" class="card-img-top" alt="Day 2">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+                <div class="card-footer">
+                    <medium class="text-muted">Day 2</medium>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://static01.nyt.com/images/2014/12/11/technology/personaltech/11machin-illo/11machin-illo-articleLarge-v3.jpg?quality=75&auto=webp&disable=upscale"
+                    width="250 px" height="300px" class="card-img-top" alt="Day 3">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+                <div class="card-footer">
+                    <medium class="text-muted">Day 3</medium>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="https://static01.nyt.com/images/2014/12/11/technology/personaltech/11machin-illo/11machin-illo-articleLarge-v3.jpg?quality=75&auto=webp&disable=upscale"
+                    width="250 px" height="300px" class="card-img-top" alt="Day 4">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+                <div class="card-footer">
+                    <medium class="text-muted">Day 4</medium>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="https://static01.nyt.com/images/2014/12/11/technology/personaltech/11machin-illo/11machin-illo-articleLarge-v3.jpg?quality=75&auto=webp&disable=upscale"
+                    width="250 px" height="300px" class="card-img-top" alt="Day 5">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+                <div class="card-footer">
+                    <medium class="text-muted">Day 5</medium>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    </div>
 </body>
+
 </html>
