--- a/index.html
+++ b/index.html
@@ -1,105 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/0aa2753bb1.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- CSS Stylesheets -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <link rel="stylesheet" href="./styles.css">
     <title>Weather Dashboard</title>
 </head>
 
 <body>
-    <h1>Weather Dashboard</h1>
+    <h1>Weather Dashboard <svg class="bi bi-lightning-fill" width="1em" height="1em" viewBox="0 0 16 16"
+            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+                d="M11.251.068a.5.5 0 0 1 .227.58L9.677 6.5H13a.5.5 0 0 1 .364.843l-8 8.5a.5.5 0 0 1-.842-.49L6.323 9.5H3a.5.5 0 0 1-.364-.843l8-8.5a.5.5 0 0 1 .615-.09z" />
+        </svg></h1>
 
-    <div class="jumbotron">
-        <h2>Current City's Forecast</h2>
-        <ul id="list" class="list-group">
-            <li class="list-group-item">Temperature</li>
-            <li class="list-group-item">Humidity</li>
-            <li class="list-group-item">Wind Speed</li>
-            <li class="list-group-item active">UV Index</li>
-        </ul>
+    <div>
+        <button type="button" id="clock">Today's Date</button>
     </div>
 
-    <div id="search">
-        <h3>Search for a city:</h3>
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Enter A Location" aria-label="Recipient's username"
-                aria-describedby="basic-addon2">
-            <div class="input-group-append">
-                <button class="btn btn-primary" type="button"><i class="fas fa-search"></i></button>
-            </div>
+
+    <div class="jumbotron bg-light">
+        <div class="container">
+            <form id="form-sub">
+                <div class="form-group ">
+                    <label id="lab" for="lab">Search for a city:</label>
+                    <input type="text" class="form-control" id="city" placeholder="ex: London...">
+                    <small id="bot" class="form-text">Enter a city name for weather details.</small>
+                    <button type="submit" class="btn btn-primary mt-3"><svg class="bi bi-search" width="1.5em"
+                            height="1.5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z" />
+                            <path fill-rule="evenodd"
+                                d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
+                        </svg></button>
+                </div>
+            </form>
+            <hr>
+            <p id="city-name" class="mr-3"></p>
+            <p id="city-weather"></p>
+            <img src="">
+            <p id="city-temp"></p>
         </div>
     </div>
 
-    <div class="container">
-        <div class="col-md-6"></div>
-        <div class="card-deck">
-            <div class="card">
-                <img src="https://static01.nyt.com/images/2014/12/11/technology/personaltech/11machin-illo/11machin-illo-articleLarge-v3.jpg?quality=75&auto=webp&disable=upscale"
-                    width="250 px" height="300 px" class="card-img-top" alt="Day 1">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <medium class="text-muted">Day 1</medium>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://static01.nyt.com/images/2014/12/11/technology/personaltech/11machin-illo/11machin-illo-articleLarge-v3.jpg?quality=75&auto=webp&disable=upscale"
-                    width="250 px" height="300 px" class="card-img-top" alt="Day 2">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <medium class="text-muted">Day 2</medium>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://static01.nyt.com/images/2014/12/11/technology/personaltech/11machin-illo/11machin-illo-articleLarge-v3.jpg?quality=75&auto=webp&disable=upscale"
-                    width="250 px" height="300px" class="card-img-top" alt="Day 3">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <medium class="text-muted">Day 3</medium>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="https://static01.nyt.com/images/2014/12/11/technology/personaltech/11machin-illo/11machin-illo-articleLarge-v3.jpg?quality=75&auto=webp&disable=upscale"
-                    width="250 px" height="300px" class="card-img-top" alt="Day 4">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <medium class="text-muted">Day 4</medium>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="https://static01.nyt.com/images/2014/12/11/technology/personaltech/11machin-illo/11machin-illo-articleLarge-v3.jpg?quality=75&auto=webp&disable=upscale"
-                    width="250 px" height="300px" class="card-img-top" alt="Day 5">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <medium class="text-muted">Day 5</medium>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    </div>
+    <!-- JQuery Scripts -->
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" 
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- Our codes -->
+    <script src="script.js"></script>
 </body>
 
 </html>
