Updated raead.me file with layout, updated code on html and js files and fixed styling issues

--- a/index.html
+++ b/index.html
@@ -38,14 +38,27 @@
                             <path fill-rule="evenodd"
                                 d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
                         </svg></button>
+                    <div id="search">
+
+
+                    </div>
                 </div>
-            </form>
-            <hr>
-            <p id="city-name" class="mr-3"></p>
-            <p id="city-weather"></p>
-            <img src="">
-            <p id="city-temp"></p>
         </div>
+        </form>
+        <hr>
+        <div>
+            <h2 id="city-name" class="mr-3"></h2> <img id="we_img" src="">
+        </div>
+        <div> <span id="temperature"></span></div>
+        <div> <span id="hum"></span></div>
+        <div> <span id="wind"></span></div>
+        <div> <span id="uv1"></span><span id="uv2"></span>
+            <div id="fivedayforecast"></div>
+
+        </div>
+
+
+    </div>
     </div>
 
     <!-- JQuery Scripts -->
